--- a/TVShow/ShowDetails/ShowDetails.storyboard
+++ b/TVShow/ShowDetails/ShowDetails.storyboard
@@ -23,7 +23,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rdp-hE-iEn" userLabel="ImageView">
                                 <rect key="frame" x="0.0" y="20" width="375" height="167"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash-logo" translatesAutoresizingMaskIntoConstraints="NO" id="w4D-xy-t1c">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w4D-xy-t1c">
                                         <rect key="frame" x="2" y="2" width="371" height="163"/>
                                     </imageView>
                                 </subviews>
@@ -106,26 +106,22 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e0C-dJ-cXN">
+                                                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-navigation-chevron-right-medium" translatesAutoresizingMaskIntoConstraints="NO" id="4A4-Tk-a7c">
                                                             <rect key="frame" x="334" y="0.0" width="41" height="43.5"/>
-                                                            <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="4"/>
-                                                            <state key="normal" image="ic-navigation-chevron-right-medium">
-                                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            </state>
-                                                        </button>
+                                                        </imageView>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="r7Q-DO-FPm" firstAttribute="bottom" secondItem="yyx-ah-5FK" secondAttribute="bottomMargin" id="0YS-Il-jff"/>
                                                         <constraint firstItem="uPK-RB-vtS" firstAttribute="leading" secondItem="r7Q-DO-FPm" secondAttribute="trailing" id="1FI-vE-cP9"/>
-                                                        <constraint firstItem="e0C-dJ-cXN" firstAttribute="top" secondItem="yyx-ah-5FK" secondAttribute="top" id="5g0-2i-TUq"/>
-                                                        <constraint firstAttribute="trailing" secondItem="e0C-dJ-cXN" secondAttribute="trailing" id="7qa-hi-gMa"/>
-                                                        <constraint firstAttribute="bottom" secondItem="e0C-dJ-cXN" secondAttribute="bottom" id="Hqi-G1-Lcc"/>
-                                                        <constraint firstItem="e0C-dJ-cXN" firstAttribute="leading" secondItem="uPK-RB-vtS" secondAttribute="trailing" id="K8J-GR-8KM"/>
                                                         <constraint firstItem="uPK-RB-vtS" firstAttribute="top" secondItem="yyx-ah-5FK" secondAttribute="topMargin" id="KZF-Aj-FYa"/>
                                                         <constraint firstItem="uPK-RB-vtS" firstAttribute="width" secondItem="yyx-ah-5FK" secondAttribute="width" multiplier="0.65" id="aQj-qk-0d6"/>
+                                                        <constraint firstItem="4A4-Tk-a7c" firstAttribute="top" secondItem="yyx-ah-5FK" secondAttribute="top" id="dJT-bJ-Td1"/>
                                                         <constraint firstItem="r7Q-DO-FPm" firstAttribute="leading" secondItem="yyx-ah-5FK" secondAttribute="leadingMargin" id="geb-U2-0Z5"/>
                                                         <constraint firstItem="r7Q-DO-FPm" firstAttribute="top" secondItem="yyx-ah-5FK" secondAttribute="topMargin" id="hC6-BS-kht"/>
+                                                        <constraint firstAttribute="trailing" secondItem="4A4-Tk-a7c" secondAttribute="trailing" id="iSw-jV-D0n"/>
                                                         <constraint firstItem="uPK-RB-vtS" firstAttribute="bottom" secondItem="yyx-ah-5FK" secondAttribute="bottomMargin" id="kkm-Az-ZFi"/>
+                                                        <constraint firstAttribute="bottom" secondItem="4A4-Tk-a7c" secondAttribute="bottom" id="qBV-B9-tut"/>
+                                                        <constraint firstItem="4A4-Tk-a7c" firstAttribute="leading" secondItem="uPK-RB-vtS" secondAttribute="trailing" id="rqi-M7-dZQ"/>
                                                         <constraint firstItem="r7Q-DO-FPm" firstAttribute="width" secondItem="yyx-ah-5FK" secondAttribute="width" multiplier="0.2" id="szd-qK-otv"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
@@ -201,6 +197,5 @@
         <image name="ic-fab-button" width="68" height="74"/>
         <image name="ic-navigate-back" width="32" height="32"/>
         <image name="ic-navigation-chevron-right-medium" width="24" height="24"/>
-        <image name="splash-logo" width="129" height="148"/>
     </resources>
 </document>
